--- a/Plant/Views/Home/Introduction.cshtml
+++ b/Plant/Views/Home/Introduction.cshtml
@@ -34,7 +34,7 @@
                     <div class="about_thumb">
                         <img src="~/LayoutAssets/img/about/the-plant-point-may-2022-ellie-hodgson-09-copy.jpg" alt="" />
                     </div>
-                    <figcaption class="about_content">
+                    <figcaption class="about_content" data-aos="fade-up" data-aos-anchor-placement="center-center">
                         <p>
                             @Localizer["text-1"]
                         </p>
@@ -50,7 +50,7 @@
     <div class="container">
         <div class="about_gallery_container">
             <div class="row">
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <article class="single_gallery_section">
                         <figure>
                             <div class="gallery_thumb">
@@ -64,7 +64,7 @@
                         </figure>
                     </article>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <article class="single_gallery_section">
                         <figure>
                             <div class="gallery_thumb">
@@ -78,7 +78,7 @@
                         </figure>
                     </article>
                 </div>
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <article class="single_gallery_section">
                         <figure>
                             <div class="gallery_thumb">
@@ -98,7 +98,7 @@
 </div>
 <!--services img end-->
 <!--chose us area start-->
-<div class="choseus_area" data-bgimg="assets/img/about/about-us-policy-bg.jpg">
+<div class="choseus_area">
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4">
@@ -152,12 +152,12 @@
 <div class="faq-client-say-area">
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 col-md-6" style="padding-top:26px;">
+            <div class="col-lg-6 col-md-6" style="padding-top:26px;" data-aos="fade-right">
                 <img src="~/LayoutAssets/img/about/bao-ve-moi-truong-19.jpg" />
             </div>
-            <div class="col-lg-6 col-md-6">
+            <div class="col-lg-6 col-md-6" data-aos="fade-left">
                 <figure>
-                    <figcaption class="about_content" ">
+                    <figcaption class="about_content" >
                         <p>@Localizer["ket luan1"]</p>
                         <p>@Localizer["ket luan2"]</p>
                     </figcaption>
