--- a/Plant/Views/Products/GetListProducts.cshtml
+++ b/Plant/Views/Products/GetListProducts.cshtml
@@ -137,23 +137,14 @@
                         </ul>
                     </div>
                 </div>
-                <div class="blog_sidebar_img"><img src="~/LayoutAssets/img/blog/il_570xN.3215982608_zsmn.jpg" style="height:auto;width:100%;margin-top:20px;border-radius:15px;" /></div>
 
             </div>
-            <div class="col-lg-9 col-md-9 col-12">
+            <div class="col-lg-9 col-md-9 col-12" data-aos="zoom-in-left">
                 <!--shop wrapper start-->
                 <!--shop toolbar start-->
                 <div class="shop_toolbar_wrapper">
                     <div class="shop_toolbar_btn">
-
-                        <button data-role="grid_3" type="button" class="btn-grid-3" data-bs-toggle="tooltip"
-                                title="3"></button>
-
-                        <button data-role="grid_4" type="button" class="active btn-grid-4" data-bs-toggle="tooltip"
-                                title="4"></button>
-
-                        <button data-role="grid_list" type="button" class="btn-list" data-bs-toggle="tooltip"
-                                title="List"></button>
+                        
                     </div>
                     <div class=" niceselect_option">
                         <form class="select_option" action="#">
@@ -173,7 +164,7 @@
                 <div class="row shop_wrapper">
                     @foreach (var item in Model)
                     {
-                        <div class="col-md-4 col-lg-3 col-6 ">
+                        <div class="col-md-4 col-lg-3 col-6 " data-aos="fade-up">
                             <article class="single_product">
                                 <figure>
                                     <div class="product_thumb">
