--- a/Plant/Areas/Admin/Views/AdminLanguages/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminLanguages/Index.cshtml
@@ -20,7 +20,7 @@
             <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="book"></i></span></span>Danh sách ngôn ngữ</h4>
         </div>
         <div class="d-flex">
-            <a class="btn btn-info" asp-action="Create"> Create New</a>
+            <a class="btn btn-outline-primary" asp-action="Create"> Create New</a>
         </div>
     </div>
     <!-- /Title -->
