--- a/Plant/Areas/Admin/Views/AdminOrders/Edit.cshtml
+++ b/Plant/Areas/Admin/Views/AdminOrders/Edit.cshtml
@@ -20,7 +20,6 @@
             <form asp-action="Edit" method="post">
                 <input type="hidden" asp-for="OrderId" />
                 <input type="hidden" asp-for="CustomerId" />
-                <input type="hidden" asp-for="PaymentId" />
 
                 <div id="example-basic">
                     <h3>
@@ -174,21 +173,8 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 form-group">
                                 <label>Hình thức thanh toán</label>
-                                <input class="form-control" asp-for="PaymentName">
+                                <input class="form-control" asp-for="PaymentStatus" readonly>
                             </div>
-                            @if (Model.PaymentId == 6)
-                            {
-                                <div class="col-lg-4 col-md-6 form-group">
-                                    <label>Xác nhận thanh toán</label>
-                                    <select class="form-control" asp-items="ViewBag.PaymentStatus" asp-for="PaymentStatus">
-                                    </select>
-                                </div>
-                            }
-                            else
-                            {
-                                <input type="hidden" asp-for="PaymentStatus" />
-                            }
-
                         </div>
                     </section>
                     <h3>
