--- a/Plant/Areas/Admin/Views/AdminOrders/Index.cshtml
+++ b/Plant/Areas/Admin/Views/AdminOrders/Index.cshtml
@@ -19,29 +19,31 @@
 <!-- Container -->
 <div class="container-fluid px-lg-4">
     <!-- Title -->
-    <div class="hk-pg-header mb-10">
+    <div class="hk-pg-header mb-10" style="margin-right: 20px;">
         <div>
             <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="book"></i></span></span>Danh sách đơn hàng</h4>
         </div>
-        <div class="d-flex">
-            @{
-                var Count = 0;
-                foreach (var item in Model)
+        @{
+            var Count = 0;
+            foreach (var item in Model)
+            {
+                if (item.OrderStatus == "Chờ xác nhận")
                 {
-                    if (item.OrderStatus == "Chờ xác nhận")
-                    {
-                        Count++;
-                    }
+                    Count++;
                 }
             }
-            <a class="btn btn-outline-danger">@Count Đơn hàng chờ xử lí</a>
+        }
+        <div class="d-flex">
+            <i class="far fa-bell fa-3x text-dark">
+                <span class="icon-number">@Count</span>
+            </i>
         </div>
     </div>
     <!-- /Title -->
     <section class="hk-sec-wrapper mb-3">
         <form asp-action="Index" method="get">
             <div class="input-group rounded mb-3">
-                <input type="search" class="form-control rounded" placeholder="Tìm kiếm đơn hàng theo email..." aria-label="Search" aria-describedby="search-addon" name="SearchEmail"/>
+                <input type="search" class="form-control rounded" placeholder="Tìm kiếm đơn hàng theo email..." aria-label="Search" aria-describedby="search-addon" name="SearchEmail" />
                 <span class="input-group-text border-0" id="search-addon">
                     <i class="fas fa-search"></i>
                 </span>
