--- a/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
+++ b/Plant/Areas/Admin/Views/Shared/_navigationAdminLayout.cshtml
@@ -31,7 +31,7 @@
                                     <a class="nav-link" asp-page="/Role/Index">Quyền truy cập</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminAspNetUsers" asp-action="Index">Danh sách tài khoản</a>
+                                    <a class="nav-link" asp-page="/Role/User">Danh sách tài khoản</a>
                                 </li>
                             </ul>
                         </li>
@@ -83,9 +83,6 @@
                         <li class="nav-item">
                             <ul class="nav flex-column">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="AdminPayments" asp-action="Index">Phương thức thanh toán</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" asp-area="Admin" asp-controller="AdminOrders" asp-action="Index"> Danh sách đơn hàng</a>
                                 </li>
 
@@ -108,31 +105,7 @@
                 </li>
             </ul>
             <hr class="nav-separator">
-            <div class="nav-header">
-                <span>Getting Started</span>
-                <span>GS</span>
-            </div>
-            <ul class="navbar-nav flex-column">
-                <li class="nav-item">
-                    <a class="nav-link" href="documentation.html">
-                        <span class="feather-icon"><i data-feather="book"></i></span>
-                        <span class="nav-link-text">Documentation</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link-with-badge" href="#">
-                        <span class="feather-icon"><i data-feather="eye"></i></span>
-                        <span class="nav-link-text">Changelog</span>
-                        <span class="badge badge-sm badge-danger badge-pill">v 1.0</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <span class="feather-icon"><i data-feather="headphones"></i></span>
-                        <span class="nav-link-text">Support</span>
-                    </a>
-                </li>
-            </ul>
+            
         </div>
     </div>
 </nav>
