--- a/Plant/Pages/Role/User.cshtml
+++ b/Plant/Pages/Role/User.cshtml
@@ -5,33 +5,74 @@
 }
 
 
-<h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" model="@Model.StatusMessage" />
 
-<table class="table table-striped">
-    <tr>
-        <th>UserName</th>
-        <th>Roles</th>
-        <th>Actions</th>
-    </tr>
-    @foreach (var user in @Model.users)
-    {
-        <tr>
-            <td>@user.UserName</td>
-            <td>@user.listroles</td>
-            <td>
-                <form method="POST" class="d-inline">
-                    <button name="Input.ID" value="@user.Id" class="btn btn-primary btn-sm"
-                            asp-page="./AddUserRole">
-                        Cập nhật Role
-                    </button>
-                </form>
-            </td>
-        </tr>
+<!-- Breadcrumb -->
+<nav class="hk-breadcrumb" aria-label="breadcrumb">
+    <ol class="breadcrumb breadcrumb-light bg-transparent">
+        <li class="breadcrumb-item"><a href="#">Quản lí hệ thống</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Danh sách người dùng</li>
+    </ol>
+</nav>
+<!-- /Breadcrumb -->
+<!-- Container -->
+<div class="container-fluid px-lg-4">
+    <!-- Title -->
+    <div class="hk-pg-header mb-10">
+        <div>
+            <h4 class="hk-pg-title"><span class="pg-title-icon"><span class="feather-icon"><i data-feather="book"></i></span></span>Danh sách người dùng</h4>
+        </div>
+    </div>
+    <!-- /Title -->
 
-    }
-</table>
+    <section class="hk-sec-wrapper mb-3">
+        <div class="row">
+            <div class="col-sm">
+                <div class="table-wrap">
+                    <div class="table-responsive">
+                        <table class="table table-sm table-hover mb-0">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th class="py-3">STT</th>
+                                    <th class="py-3">LastName</th>
+                                    <th class="py-3">FirstName</th>
+                                    <th class="py-3">Email</th>
+                                    <th class="py-3">Roles</th>
+                                    <th class="py-3">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
 
+                                @{
+                                    int index = 1;
+                                    foreach (var item in Model.users)
+                                    {
+                                        <tr>
+                                            <td>@index</td>
+                                            <td>@item.LastName</td>
+                                            <td>@item.FirstName</td>
+                                            <td>@item.Email</td>
+                                            <td>@item.listroles</td>
+                                            <td>
+                                                <form method="POST" class="d-inline">
+                                                    <button name="Input.ID" value="@item.Id" class="btn btn-light"
+                                                            asp-page="./AddUserRole">
+                                                        <i class="far fa-sliders-h text-dark"></i>
+                                                    </button>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                        index++;
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
