--- a/Plant/Views/Home/Index.cshtml
+++ b/Plant/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
                         <div class="slider_content">
                             <h1 style="color:white;text-shadow: 0 0 0.2em black; ">@Localizer["potted plant"] </h1>
                             <p style="color:white;text-shadow: 0 0 0.2em black; ">@Localizer["discount"] <span>20% </span> @Localizer["luckybamboo member"]</p>
-                            <a class="button" asp-area="" asp-controller="Products" asp-action="Index">@Localizer["discover now"] </a>
+                            <a class="button" asp-area="" asp-controller="Products" asp-action="Index"><span class="animation-heartBeat">@Localizer["discover now"]</span></a>
                         </div>
                     </div>
                 </div>
@@ -50,6 +50,7 @@
         </div>
     </div>
 </section>
+
 <!--slider area end-->
 <!--lukani store titlev start-->
 <div class="lukani_store_title">
@@ -57,7 +58,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="section_title lstore_title">
-                    <h2>Lucky BamBoo Store</h2>
+                    <h2 class="animation-heartBeat">Lucky BamBoo Store</h2>
                     <p>
                         @Localizer["welcome"]
                     </p>
@@ -72,7 +73,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-6">
-                <div class="single_shipping">
+                <div class="single_shipping" data-aos="fade-right">
                     <div class="shipping_icone">
                         <img src="~/LayoutAssets/img/about/shipping1.png" alt="">
                     </div>
@@ -83,7 +84,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="single_shipping col_2">
+                <div class="single_shipping col_2" data-aos="fade-up">
                     <div class="shipping_icone">
                         <img src="~/LayoutAssets/img/about/shipping2.png" alt="">
                     </div>
@@ -94,14 +95,13 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
-                <div class="single_shipping col_3">
+                <div class="single_shipping col_3" data-aos="fade-left">
                     <div class="shipping_icone">
                         <img src="~/LayoutAssets/img/about/shipping3.png" alt="">
                     </div>
                     <div class="shipping_content">
                         <h3>@Localizer["Friendly Services"]</h3>
                         <p>@Localizer["return goods"]</p>
-
                     </div>
                 </div>
             </div>
@@ -110,13 +110,13 @@
 </div>
 <!--shipping area end-->
 <!--product area start-->
-<div class="product_area  mb-95 ">
+<div class="product_area  mb-95" data-aos="zoom-in">
     <div class="container">
         <div class="row pt-5">
             <div class="col-12">
                 <div class="product_header">
                     <div class="section_title">
-                        <h2>@Localizer["featured products"]</h2>
+                        <h2 class="animation-heartBeat">@Localizer["featured products"]</h2>
                     </div>
                 </div>
             </div>
@@ -125,7 +125,7 @@
             <div class="tab-pane fade show active">
                 <div class="row">
                     <div class="product_carousel product_column4 owl-carousel">
-                        
+
                         @for (int i = 0; i < listProduct.Count; i += 2)
                         {
                             <div class="col-lg-3">
@@ -151,15 +151,8 @@
                                                     </a>
                                                 </h4>
                                                 <div class="price_box">
-                                                    @if (listProduct[i].Voucher == null)
-                                                    {
-                                                        <span class="current_price">@listProduct[i].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="current_price">@listProduct[i].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                        <span class="old_price">@listProduct[i].OriginalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                    }
+                                                    <span class="current_price">@listProduct[i].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
+                                                    <span class="count_product_sell">Đã bán @listProduct[i].CountProductSell</span>
                                                 </div>
                                             </figcaption>
                                         </figure>
@@ -185,15 +178,8 @@
                                                     </a>
                                                 </h4>
                                                 <div class="price_box">
-                                                    @if (listProduct[i + 1].Voucher == null)
-                                                    {
-                                                        <span class="current_price">@listProduct[i + 1].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="current_price">@listProduct[i + 1].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                        <span class="old_price">@listProduct[i + 1].OriginalPrice.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
-                                                    }
+                                                    <span class="current_price">@listProduct[i + 1].Price.ToString("C", new System.Globalization.CultureInfo("vi-VN"))</span>
+                                                    <span class="count_product_sell">Đã bán @listProduct[i + 1].CountProductSell</span>
                                                 </div>
                                             </figcaption>
                                         </figure>
@@ -214,105 +200,26 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="banner_fullwidth_content">
-                    <h2>@Localizer["choice plant"]</h2>
+                <div class="banner_fullwidth_content" data-aos="fade-right">
+                    <h2 class="animation-heartBeat">@Localizer["choice plant"]</h2>
                     <p>@Localizer["discount"] <span>20% </span> @Localizer["luckybamboo member"]</p>
                     <a asp-area="" asp-controller="Products" asp-action="Index">@Localizer["discover now"]</a>
                 </div>
             </div>
-            <div class="earth col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-center">
+            <div class="earth col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-center" data-aos="fade-left">
                 <img src="~/LayoutAssets/img/blog/snapedit_1696239622506.png" style="height:350px;width:350px;" />
             </div>
         </div>
     </div>
 </div>
 <!--banner fullwidth end-->
-<!--testimonial area start-->
-<div class="testimonial_area">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="section_title">
-                    <h2>@Localizer["customer say"]</h2>
-                </div>
-            </div>
-        </div>
-        <div class="testimonial_container">
-            <div class="row">
-                <div class="testimonial_carousel owl-carousel">
-                    <div class="col-12">
-                        <div class="single-testimonial">
-                            <div class="testimonial-icon-img">
-                                <img src="~/LayoutAssets/img/about/testimonials-icon.png" alt="">
-                            </div>
-                            <div class="testimonial_content">
-                                <p>
-                                    “ When a beautiful design is combined with powerful technology, <br>
-                                    it truly is an artwork. I love how my website operates and looks with this
-                                    theme. Thank you for the awesome product. ”
-                                </p>
-                                <div class="testimonial_text_img">
-                                    <a href="#"><img src="~/LayoutAssets/img/about/testimonial1.png" alt=""></a>
-                                </div>
-                                <div class="testimonial_author">
-                                    <p><a href="#">Rebecka Filson</a> / <span>CEO of CSC</span></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="single-testimonial">
-                            <div class="testimonial-icon-img">
-                                <img src="~/LayoutAssets/img/about/testimonials-icon.png" alt="">
-                            </div>
-                            <div class="testimonial_content">
-                                <p>
-                                    “ When a beautiful design is combined with powerful technology, <br>
-                                    it truly is an artwork. I love how my website operates and looks with this
-                                    theme. Thank you for the awesome product. ”
-                                </p>
-                                <div class="testimonial_text_img">
-                                    <a href="#"><img src="~/LayoutAssets/img/about/testimonial2.png" alt=""></a>
-                                </div>
-                                <div class="testimonial_author">
-                                    <p><a href="#">Amber Laha</a> / <span>CEO of DND</span></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="single-testimonial">
-                            <div class="testimonial-icon-img">
-                                <img src="~/LayoutAssets/img/about/testimonials-icon.png" alt="">
-                            </div>
-                            <div class="testimonial_content">
-                                <p>
-                                    “ When a beautiful design is combined with powerful technology, <br>
-                                    it truly is an artwork. I love how my website operates and looks with this
-                                    theme. Thank you for the awesome product. ”
-                                </p>
-                                <div class="testimonial_text_img">
-                                    <a href="#"><img src="~/LayoutAssets/img/about/testimonial3.png" alt=""></a>
-                                </div>
-                                <div class="testimonial_author">
-                                    <p><a href="#">Lindsy Neloms</a> / <span>CEO of SFD</span></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!--testimonial area end-->
 <!--blog area start-->
-<section class="blog_section blog_five">
+<section class="blog_section blog_five" data-aos="zoom-in-up">
     <div class="container">
         <div class="row">
             <div class="col-12">
                 <div class="section_title">
-                    <h2>@Localizer["our latest posts"]</h2>
+                    <h2 class="animation-heartBeat">@Localizer["our latest posts"]</h2>
                 </div>
             </div>
         </div>
@@ -345,31 +252,6 @@
 <!--blog area end-->
 <!--newsletter area start-->
 <div class="newsletter_area_start">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <div class="section_title">
-                    <h2>Get <span>20% Off</span> Your Next Order</h2>
-                </div>
-                <div class="newsletter_container">
-                    <div class="subscribe_form">
-                        <form id="mc-form" class="mc-form footer-newsletter">
-                            <input id="mc-email" type="email" autocomplete="off" placeholder="Enter you email" />
-                            <button id="mc-submit">Subscribe</button>
-                            <div class="email_icon">
-                                <i class="fa-solid fa-envelope"></i>
-                            </div>
-                        </form>
-                        <!-- mailchimp-alerts Start -->
-                        <div class="mailchimp-alerts text-centre">
-                            <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                            <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                            <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                        </div><!-- mailchimp-alerts end -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
 </div>
 <!--newsletter area end-->
