--- a/Plant/Views/Orders/CartDone.cshtml
+++ b/Plant/Views/Orders/CartDone.cshtml
@@ -88,7 +88,7 @@
         })
         .catch(error => {
             // Handle any errors that occur during the fetch
-            console.error('Error:', error);
+            console.error("cartdone.cshtml", error);
         });
 </script>
 }
